# SimpleMemory

./: .dockerignore  .gitignore  DESIGN.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/src/kmg_api/: config.py  dependencies.py  main.py
api/src/kmg_api/middleware/: __init__.py  auth.py  correlation.py  logging.py  metrics.py  tenant.py
api/src/kmg_api/routes/: __init__.py  canvas.py  chunks.py  graph.py  health.py  jobs.py  search.py  sources.py  wiki.py  workspaces.py
api/src/kmg_api/schemas/: canvas.py  chunk.py  graph.py  search.py  source.py  wiki.py  workspace.py
api/tests/: test_health.py  test_integration.py  test_routes_sources.py  test_routes_workspaces.py  test_schemas.py
shared/: pyproject.toml
shared/src/kmg_shared/: config.py  errors.py  logging.py  metrics.py  resilience.py  tracing.py
shared/src/kmg_shared/adapters/: __init__.py  local_storage.py  openai_embedding.py  qdrant_db.py  redis_cache.py  redis_queue.py  s3_storage.py
shared/src/kmg_shared/auth/: __init__.py  api_keys.py  scoping.py  tokens.py
shared/src/kmg_shared/db/: engine.py  session.py
shared/src/kmg_shared/infra/: __init__.py  registry.py
shared/src/kmg_shared/ports/: __init__.py  cache.py  embedding.py  queue.py  storage.py  vector_db.py
shared/src/kmg_shared/repositories/: __init__.py  api_key_repo.py  base_repo.py  canvas_repo.py  chunk_repo.py  fact_repo.py  graph_repo.py  job_repo.py  source_repo.py  wiki_repo.py
shared/src/kmg_shared/services/: __init__.py  canvas_service.py  graph_service.py  search_service.py  source_service.py  wiki_service.py  (+1 more)
shared/tests/: test_auth.py  test_errors.py  test_models.py  test_ports.py  test_registry.py  test_repositories.py  test_services.py
(+160 files in other folders)
