[project]
name = "kmg-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=24.0",
    "qdrant-client>=1.12",
    "boto3>=1.35",
    "redis>=5.2",
    "PyJWT>=2.9",
    "passlib[bcrypt]>=1.7",
    "prometheus-client>=0.21",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "tenacity>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kmg_shared"]
